crates/cli/tests/snapshots/run_test__errors_for_internal_task.snap
---
source: crates/cli/tests/run_test.rs
expression: assert.output()
---
Error: project::unknown_task

  × Unknown task internalOnly for project base.
  help: Has this task been configured?
