crates/cli/tests/snapshots/run_test__errors_for_unknown_all_target.snap
---
source: crates/cli/tests/run_test.rs
expression: assert.output()
---
│ CAUTION
│ No tasks found for target(s) :unknown
