crates/cli/tests/snapshots/run_test__errors_for_unknown_project.snap
---
source: crates/cli/tests/run_test.rs
expression: assert.output()
---
Error: project_graph::unknown_project

  × No project has been configured with the ID unknown.



