crates/cli/tests/snapshots/run_test__errors_for_unknown_task_in_project.snap
---
source: crates/cli/tests/run_test.rs
expression: assert.output()
---
Error: project::unknown_task

  × Unknown task unknown for project base.
  help: Has this task been configured?
